# claude-dynamic-agents

./: .gitignore  CLAUDE.md  CRITICAL_FIXES.md  README.md
.claude/: settings.json  settings.local.json.example
.claude/agents/: a11y-auditor.md  backend-analyzer.md  backend-api-reviewer.md  backend-developer.md  brainstorm.md  bug-fixer.md  correctness-implementer.md  fastapi-notes-backend-implementer.md  frontend-analyzer.md  frontend-developer.md  frontend-perf-analyzer.md  orchestrator.md  pr-creator.md  pr-reviewer.md  react-notes-frontend-implementer.md  security-analyzer.md  security-implementer.md  synthesizer.md  test-coverage-analyzer.md  test-developer.md  test-runner.md  ux-perf-specialist.md
.claude/catalog/: mcps.md  models.md  skills.md
.claude/commands/: analyze.md  plan.md  team.md  tos.md
.claude/hooks/: verify-agents.sh
.claude/registry/: index.md
.claude/rules/: agent-contracts.md  failure-handling.md  orchestration.md
docs/: Orchestrate-teams.md  agent-lifecycle.md  architecture.md  catalog.md  context-propagation.md  demo-talk.md  failure-handling.md  observability.md  pr-review-flow.md  subagents.md  talk-slides.md
projects/notes-app/: placeholder.txt
projects/notes-app/backend/: .gitignore  Dockerfile  FILE_MANIFEST.txt  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.sh
projects/notes-app/backend/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
projects/notes-app/backend/tests/: conftest.py  test_notes.py
(+60 files in other folders)
